k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsthecharge.com
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: whatsthecharge.com
      app.kubernetes.io/part-of: whatsthecharge.com
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whatsthecharge.com
        app.kubernetes.io/part-of: whatsthecharge.com
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - whatsthecharge.com
                topologyKey: kubernetes.io/hostname
      containers:
        - name: web
          image: docker.pkg.github.com/sjparkinson/whatsthecharge.com/whatsthecharge.com:latest
          command: [ "/cnb/lifecycle/launcher" ]
          args: ["bundle", "exec", "puma", "--port", "3000", "--early-hints"]
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
          livenessProbe: &healthcheck
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
                - name: Host
                  value: whatsthecharge.com
                - name: X-Forwarded-Proto
                  value: https
            initialDelaySeconds: 30
          readinessProbe:
            <<: *healthcheck
      imagePullSecrets:
        - name: github
