k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatsthecharge.com
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: whatsthecharge.com
    app.kubernetes.io/part-of: whatsthecharge.com
